--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="no">
     <meta name="x5-fullscreen" content="false">
-    <title>关于xxx的100件小事</title>
+    <title>关于肖文铃的100件小事</title>
   </head>
   <body>
     <div id="app"></div>
